@@ -1,5 +1,12 @@
 2001-02-17  Kenichi OKADA <okada@opaopa.org>
 
+	* ntlm.el(TopLevel): Require `poem'
+	(ntlm-build-auth-request): Omit `request-bufIndex'
+	(ntlm-build-auth-response): Omit `response', `ident' and `msgType'
+	Use `string-as-unibyte' of `poem'.
+
+2001-02-17  Kenichi OKADA <okada@opaopa.org>
+
 	* sasl-scram.el(sasl-scram-md5-parse-server-msg-1): Error
 	if server's response cannot be parsed.
 
